--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,21 @@
+# Compiled Object files
+*.slo
+*.lo
+*.o
+
+# Compiled Dynamic libraries
+*.so
+
+# Compiled Static libraries
+*.lai
+*.la
+*.a
+
+# Emacs backup files
 *~
-subgraph
+
+# Automake cache directory
+autom4te.cache
+
+# Typical build directory
+bd
